--- a/Unit01/Unit01_Crash Course on Python.ipynb
+++ b/Unit01/Unit01_Crash Course on Python.ipynb
@@ -35,10 +35,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-11T14:45:51.845165Z",
+     "start_time": "2024-09-11T14:45:49.179216Z"
+    }
+   },
+   "source": [
+    "number = int(input(\"Enter a number: \"))\n",
+    "\n",
+    "if number % 2 == 0:\n",
+    "    print(f\"{number} is an even number.\")\n",
+    "else:\n",
+    "    print(f\"{number} is an odd number.\")"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 is an even number.\n"
+     ]
+    }
+   ],
+   "execution_count": 2
   },
   {
    "cell_type": "markdown",
@@ -56,32 +76,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-11T14:59:10.028895Z",
+     "start_time": "2024-09-11T14:58:27.008105Z"
+    }
+   },
+   "source": [
+    "while True:\n",
+    "    a = int(input(\"請問需要建造幾次模板故事: \"))\n",
+    "    b = int(input(\"請輸入課程期數: \"))\n",
+    "    c = input(\"請輸入課程名稱: \")\n",
+    "    d = input(\"請輸入姓名: \")\n",
+    "    e = input(\"請輸入您的背景(科系或職業): \")\n",
+    "    f = input(\"請簡述對於本課程得期望(列出幾點修完課程想得到的技能/對自己未來的規劃): \")\n",
+    "    \n",
+    "    for i in range(a):\n",
+    "        print(\"------------------------------------------\")\n",
+    "        print(f\"第{b}期-{c}\\n姓名: {d}\\n學生背景: {e}\")\n",
+    "        print(\"==========================================\")\n",
+    "        print(f\"{d} 修習完課程[ {c} ]後，\\n結業成果獲得: {f} 。\\nWell Done.\")\n",
+    "        print(\"------------------------------------------\")\n",
+    "    \n",
+    "    g = input(\"是否重複執行(y/n): \")\n",
+    "    if g == \"n\":\n",
+    "        break"
+   ],
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "請問需要建造幾次模板故事：1\n",
-      "請輸入課程期數: 342\n",
-      "請輸入課程名稱: python機器學習\n",
-      "請輸入姓名: 江尚瑀\n",
-      "請輸入您的背景(科系或職業): 資工訓練班學生\n",
-      "請簡述對於本課程得期望(列出幾點修完課程想得到的技能/對自己未來的規劃): 機器學習\n",
       "------------------------------------------\n",
-      "第342期 - python機器學習 \n",
-      "姓名： 江尚瑀 ,\n",
-      "學生背景： 資工訓練班學生\n",
+      "第425期-Python機器學習入門\n",
+      "姓名: 謝志謙\n",
+      "學生背景: 商業分析師\n",
       "==========================================\n",
-      "江尚瑀 修習完課程[ python機器學習 ]後，\n",
+      "謝志謙 修習完課程[ Python機器學習入門 ]後，\n",
       "結業成果獲得: 機器學習 。\n",
       "Well Done.\n",
       "------------------------------------------\n"
      ]
     }
    ],
-   "source": []
+   "execution_count": 6
   },
   {
    "cell_type": "markdown",
