--- a/Unit01/Unit01_Crash Course on Python.ipynb
+++ b/Unit01/Unit01_Crash Course on Python.ipynb
@@ -135,10 +135,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-11T15:10:46.769479Z",
+     "start_time": "2024-09-11T15:10:33.934350Z"
+    }
+   },
+   "source": [
+    "import random\n",
+    "\n",
+    "answer = random.randint(1, 100)\n",
+    "\n",
+    "times = 0\n",
+    "while True:\n",
+    "    number = int(input(\"Enter a number: \"))\n",
+    "    \n",
+    "    times += 1\n",
+    "    \n",
+    "    if number < 1 or number > 100:\n",
+    "        print(\"輸入的數字超過範圍！！\")\n",
+    "        continue\n",
+    "    \n",
+    "    if number == answer:\n",
+    "        print(\"恭喜猜對了!\")\n",
+    "        break\n",
+    "    \n",
+    "    print(\"猜錯了！\")\n",
+    "    \n",
+    "    a = input(\"請問是否繼續？(y/n)\")\n",
+    "    \n",
+    "    if a == \"n\":\n",
+    "        break\n",
+    "\n",
+    "print(f\"嘗試次數 {times}\")"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "猜錯了！\n",
+      "嘗試次數 1\n"
+     ]
+    }
+   ],
+   "execution_count": 25
   },
   {
    "cell_type": "markdown",
