--- a/Unit02/2.2.2_Pandas數據分析.ipynb
+++ b/Unit02/2.2.2_Pandas數據分析.ipynb
@@ -18,18 +18,17 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-22T12:07:54.780113Z",
-     "start_time": "2024-09-22T12:07:53.791967Z"
+     "end_time": "2024-09-22T12:38:51.134983Z",
+     "start_time": "2024-09-22T12:38:51.109356Z"
     }
    },
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "from Cython.Shadow import numeric"
+    "import numpy as np"
    ],
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 106
   },
   {
    "cell_type": "markdown",
