--- a/Unit04/_Loss Function.ipynb
+++ b/Unit04/_Loss Function.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,23 +37,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error:  [1.0, 0.6000000000000001, 1.1999999999999997, -2.5, -2.4, 1.25]\n",
+      "Absolute Value of Error:  [1.0, 0.6000000000000001, 1.1999999999999997, 2.5, 2.4, 1.25]\n",
+      "Square Error:  [1.0, 0.3600000000000001, 1.4399999999999993, 6.25, 5.76, 1.5625]\n",
+      "Absolute Value of Error:  [1.0, 0.6000000000000001, 1.1999999999999997, 2.5, 2.4, 1.25]\n",
+      "MAE =  1.4916666666666665\n",
+      "Square Error:  [1.0, 0.3600000000000001, 1.4399999999999993, 6.25, 5.76, 1.5625]\n",
+      "MSE =  2.72875\n",
+      "RMSE =  1.651892853668179\n"
+     ]
+    }
+   ],
    "source": [
+    "# Ans\n",
+    "import math\n",
+    "error = []\n",
+    "absError = []\n",
+    "squareError = []\n",
+    "for i in range(len(target)):\n",
+    "    value = target[i] - prediction[i]\n",
+    "    error.append(value)\n",
+    "    absError.append(abs(value))\n",
+    "    squareError.append(value * value)\n",
+    "print(\"Error: \", error)\n",
+    "print(\"Absolute Value of Error: \", absError)\n",
+    "print(\"Square Error: \", squareError)\n",
+    "\n",
     "#平均絕對誤差MAE\n",
-    "print(\"Absolute Value of Error: \")\n",
-    "print(\"MAE = \")\n",
+    "print(\"Absolute Value of Error: \", absError)\n",
+    "print(\"MAE = \", sum(absError) / len(absError))\n",
     "\n",
     "#均方誤差MSE\n",
-    "print(\"Square Error: \")\n",
-    "print(\"MSE = \")\n",
+    "print(\"Square Error: \", squareError)\n",
+    "print(\"MSE = \", sum(squareError) / len(squareError))\n",
     "\n",
     "#均方根誤差RMSE\n",
-    "print(\"RMSE = \")\n",
-    "\n",
-    " \n",
-    "\n"
+    "print(\"RMSE = \", math.sqrt(sum(squareError) / len(squareError)))"
    ]
   },
   {
@@ -66,16 +92,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Target Variance =  7.570347222222222\n",
+      "Target Standard Deviation =  2.7514263977475797\n"
+     ]
+    }
+   ],
    "source": [
     "targetDeviation = []\n",
     "targetMean = sum(target) / len(target)#target平均值\n",
     "for val in target:\n",
     "    targetDeviation.append((val - targetMean) * (val - targetMean))\n",
     "print(\"Target Variance = \", sum(targetDeviation) / len(targetDeviation))#方差\n",
-    "print(\"Target Standard Deviation = \", sqrt(sum(targetDeviation) / len(targetDeviation)))#標準差"
+    "print(\"Target Standard Deviation = \", math.sqrt(sum(targetDeviation) / len(targetDeviation)))#標準差\n"
    ]
   },
   {
@@ -94,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,11 +139,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MAE =   1.4916666666666665\n",
+      "MSE =  2.72875\n",
+      "RMSE =  1.651892853668179\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages/sklearn/metrics/_regression.py:492: FutureWarning: 'squared' is deprecated in version 1.4 and will be removed in 1.6. To calculate the root mean squared error, use the function'root_mean_squared_error'.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "#載入迴歸常見的評估指標套件\n",
+    "from sklearn import metrics\n",
+    "\n",
+    "MAE = metrics.mean_absolute_error(y_test, predictions)\n",
+    "MSE = metrics.mean_squared_error(y_test, predictions)\n",
+    "RMSE = metrics.mean_squared_error(y_test, predictions, squared=False)\n",
     "\n",
     "print(\"MAE =  \", MAE)\n",
     "print(\"MSE = \", MSE)\n",
@@ -139,7 +197,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
