--- a/Unit05_2/DecisionTree_RandomForest.ipynb
+++ b/Unit05_2/DecisionTree_RandomForest.ipynb
@@ -281,9 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -367,9 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -954,9 +950,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1438,9 +1432,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1591,7 +1583,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1605,9 +1597,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
